# mock/swagger.yml
@@ -22,6 +22,20 @@ tags:
   - name: users
     description: Users related api.
 paths:
+  /banpick:
+    get:
+      description: 查询英雄办选统计数据列表
+      operationId: getBanPickData
+      responses:
+        "200":
+          description: OK
+  /banpick/{id}:
+    get:
+      description: 查询id对应英雄办选详情
+      operationId: getBanPickDetail
+      responses:
+        "200":
+          description: OK
   /players:
     get: #method类型
       tags: #所属标签
@@ -30,7 +44,7 @@ paths:
       summary: 获取玩家信息列表 # 概要
       description: 返回玩家信息数组 # 详细描述
       # 描述参数信息
-      parameters: 
+      parameters:
         - name: accountname
           in: query # 参数位于哪里
           description: 用于过滤的账户名称
@@ -71,7 +85,7 @@ paths:
                       players:
                         type: array
                         items:
-                          $ref: '#/components/schemas/Player'
+                          $ref: "#/components/schemas/Player"
     post: #在get后面增加一个post定义
       tags: #所属标签
         - players
@@ -79,20 +93,20 @@ paths:
       summary: 新增玩家信息 # 概要
       description: 创建玩家并返回创建玩家的数据 # 详细描述
       # 描述参数信息
-      parameters: 
+      parameters:
         - name: player
           in: query # 参数位于哪里
           description: 新建玩家数据
           schema:
-            $ref: '#/components/schemas/Player'
+            $ref: "#/components/schemas/Player"
       responses:
         200:
           description: OK
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
   /players/{id}: #多了一个参数
     get:
-      tags: 
+      tags:
         - players
       summary: 获取指定玩家信息
       operationId: getPlayer
@@ -108,9 +122,9 @@ paths:
         200:
           description: OK
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
     put: # 在get后面定义put接口
       tags:
         - players
@@ -132,14 +146,14 @@ paths:
           required: true
           description: 要更新的玩家数据
           schema:
-            $ref: '#/components/schemas/Player'
+            $ref: "#/components/schemas/Player"
       responses:
         200:
           description: OK
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
     delete:
       tags:
         - players
@@ -168,9 +182,9 @@ paths:
                     type: integer
                     format: int32
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'    
+          $ref: "#/components/responses/NotFound"
   /articles:
     get:
       tags:
@@ -183,17 +197,17 @@ paths:
           in: query
           description: Used to filter articles by importance.
           schema:
-            $ref: '#/components/schemas/Article/properties/importance'
+            $ref: "#/components/schemas/Article/properties/importance"
         - name: title
           in: query
           description: Used to filter articles by matched title substring.
           schema:
-            $ref: '#/components/schemas/Article/properties/title'
+            $ref: "#/components/schemas/Article/properties/title"
         - name: type
           in: query
           description: Used to filter articles by type.
           schema:
-            $ref: '#/components/schemas/Article/properties/type'
+            $ref: "#/components/schemas/Article/properties/type"
         - name: page
           in: query
           description: The wanted page number (one page).
@@ -237,7 +251,7 @@ paths:
                       items:
                         type: array
                         items:
-                          $ref: '#/components/schemas/Article'
+                          $ref: "#/components/schemas/Article"
     post:
       tags:
         - articles
@@ -252,7 +266,7 @@ paths:
           required: true
           description: The data for new article.
           schema:
-            $ref: '#/components/schemas/Article'
+            $ref: "#/components/schemas/Article"
       responses:
         200:
           description: OK
@@ -268,9 +282,9 @@ paths:
                     type: object
                     properties:
                       article:
-                        $ref: '#/components/schemas/Article'
+                        $ref: "#/components/schemas/Article"
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
   /articles/{id}:
     get:
       tags:
@@ -303,11 +317,11 @@ paths:
                     type: object
                     properties:
                       article:
-                        $ref: '#/components/schemas/Article'
+                        $ref: "#/components/schemas/Article"
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
     put:
       tags:
         - articles
@@ -329,7 +343,7 @@ paths:
           required: true
           description: data for the updated article.
           schema:
-            $ref: '#/components/schemas/Article'
+            $ref: "#/components/schemas/Article"
       responses:
         200:
           description: OK
@@ -345,11 +359,11 @@ paths:
                     type: object
                     properties:
                       article:
-                        $ref: '#/components/schemas/Article'
+                        $ref: "#/components/schemas/Article"
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
     delete:
       tags:
         - articles
@@ -378,9 +392,9 @@ paths:
                     type: integer
                     format: int32
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
   /pageviews:
     get:
       tags:
@@ -405,7 +419,7 @@ paths:
                       pageviews:
                         type: array
                         items:
-                          $ref: '#/components/schemas/Pageviews'
+                          $ref: "#/components/schemas/Pageviews"
   /transactions:
     get:
       tags:
@@ -433,7 +447,7 @@ paths:
                       items:
                         type: array
                         items:
-                          $ref: '#/components/schemas/Transaction'
+                          $ref: "#/components/schemas/Transaction"
   /roles:
     get:
       tags:
@@ -461,7 +475,7 @@ paths:
                       items:
                         type: array
                         items:
-                          $ref: '#/components/schemas/Role'
+                          $ref: "#/components/schemas/Role"
     post:
       tags:
         - roles
@@ -476,7 +490,7 @@ paths:
           required: true
           description: The data for new role.
           schema:
-            $ref: '#/components/schemas/Role'
+            $ref: "#/components/schemas/Role"
       responses:
         200:
           description: OK
@@ -495,7 +509,7 @@ paths:
                         type: integer
                         format: int64
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
   /roles/{id}:
     put:
       tags:
@@ -518,7 +532,7 @@ paths:
           required: true
           description: The data for updated role.
           schema:
-            $ref: '#/components/schemas/Role'
+            $ref: "#/components/schemas/Role"
       responses:
         200:
           description: OK
@@ -534,11 +548,11 @@ paths:
                     type: object
                     properties:
                       role:
-                        $ref: '#/components/schemas/Role'
+                        $ref: "#/components/schemas/Role"
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
     delete:
       tags:
         - roles
@@ -567,9 +581,9 @@ paths:
                     type: integer
                     format: int32
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
   /routes:
     get:
       tags:
@@ -592,7 +606,7 @@ paths:
                     type: object
                     properties:
                       routes:
-                        $ref: '#/components/schemas/Role/properties/routes'
+                        $ref: "#/components/schemas/Role/properties/routes"
   /users:
     get:
       tags:
@@ -625,9 +639,9 @@ paths:
                       items:
                         type: array
                         items:
-                          $ref: '#/components/schemas/User'
+                          $ref: "#/components/schemas/User"
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
   /users/register:
     post:
       tags:
@@ -641,7 +655,7 @@ paths:
           required: true
           description: The data for created user.
           schema:
-            $ref: '#/components/schemas/User'
+            $ref: "#/components/schemas/User"
       responses:
         200:
           description: OK
@@ -666,13 +680,13 @@ paths:
           required: true
           description: The user name for login.
           schema:
-            $ref: '#/components/schemas/User/properties/username'
+            $ref: "#/components/schemas/User/properties/username"
         - name: password
           in: query
           required: true
           description: The password for login in clear text.
           schema:
-            $ref: '#/components/schemas/User/properties/password'
+            $ref: "#/components/schemas/User/properties/password"
       responses:
         200:
           description: OK
@@ -702,7 +716,7 @@ paths:
                         type: string
                         example: admin-token
         400:
-          $ref: '#/components/responses/InvalidUser'
+          $ref: "#/components/responses/InvalidUser"
   /users/logout:
     post:
       tags:
@@ -752,13 +766,13 @@ paths:
                     type: object
                     properties:
                       user:
-                        $ref: '#/components/schemas/User'
+                        $ref: "#/components/schemas/User"
         400:
-          $ref: '#/components/responses/InvalidUser'
+          $ref: "#/components/responses/InvalidUser"
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
     put:
       tags:
         - users
@@ -795,13 +809,13 @@ paths:
                     type: object
                     properties:
                       user:
-                        $ref: '#/components/schemas/User'
+                        $ref: "#/components/schemas/User"
         400:
-          $ref: '#/components/responses/InvalidUser'
+          $ref: "#/components/responses/InvalidUser"
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
     delete:
       tags:
         - users
@@ -829,11 +843,11 @@ paths:
                     type: integer
                     format: int32
         400:
-          $ref: '#/components/responses/InvalidUser'
+          $ref: "#/components/responses/InvalidUser"
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
         404:
-          $ref: '#/components/responses/NotFound'
+          $ref: "#/components/responses/NotFound"
   /users/info:
     post:
       tags:
@@ -858,9 +872,9 @@ paths:
                     type: object
                     properties:
                       user:
-                        $ref: '#/components/schemas/User'
+                        $ref: "#/components/schemas/User"
         401:
-          $ref: '#/components/responses/Unauthorized'
+          $ref: "#/components/responses/Unauthorized"
 components:
   securitySchemes:
     AccessTokenAuth:
@@ -873,19 +887,19 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Error'
+            $ref: "#/components/schemas/Error"
     Unauthorized:
       description: Unauthorized
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Error'
+            $ref: "#/components/schemas/Error"
     InvalidUser:
       description: Invalid username supplied
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/Error'
+            $ref: "#/components/schemas/Error"
   schemas:
     Error:
       type: object
@@ -936,7 +950,7 @@ components:
           format: url
           example: https://a1.espncdn.com/combiner/i?img=%2Fphoto%2F2018%2F1103%2Fr458060_1296x729_16%2D9.jpg&w=920&h=518&scale=crop&cquality=80&location=origin&format=jpg
         timestamp:
-          $ref: '#/components/schemas/Timestamp'
+          $ref: "#/components/schemas/Timestamp"
         platforms:
           type: array
           items:
@@ -970,14 +984,14 @@ components:
             - JP
             - EU
         pageviews:
-          $ref: '#/components/schemas/Pageviews/properties/pageviews'
+          $ref: "#/components/schemas/Pageviews/properties/pageviews"
       required:
-       - id
-       - status
-       - title
-       - timestamp
-       - importance
-       - author
+        - id
+        - status
+        - title
+        - timestamp
+        - importance
+        - author
     Pageviews:
       type: object
       properties:
@@ -1002,7 +1016,7 @@ components:
           type: string
           format: uuid
         timestamp:
-          $ref: '#/components/schemas/Timestamp'
+          $ref: "#/components/schemas/Timestamp"
         username:
           type: string
           example: Chong Guo
@@ -1033,7 +1047,7 @@ components:
           type: string
           example: Super Administrator. Have access to view all pages.
         routes:
-          $ref: '#/components/schemas/AnyValue'
+          $ref: "#/components/schemas/AnyValue"
       required:
         - key
         - name
@@ -1068,7 +1082,7 @@ components:
         roles:
           type: array
           items:
-            $ref: '#/components/schemas/Role/properties/key'
+            $ref: "#/components/schemas/Role/properties/key"
       required:
         - id
         - username
@@ -1076,10 +1090,10 @@ components:
         - roles
     Timestamp:
       oneOf:
-      - type: integer
-        format: int32
-        example: 1559605283
-      - type: string
-        format: date-time
-        example: 2017-07-21T17:32:28Z
+        - type: integer
+          format: int32
+          example: 1559605283
+        - type: string
+          format: date-time
+          example: 2017-07-21T17:32:28Z
     AnyValue: {}
